# esp32-mipidsi-clock

./: .env.template  Cargo.toml  README.md  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
slint_generated/: Cargo.toml  build.rs
src/: board.rs  controller.rs  lib.rs  main.rs  main.txt  moon.rs  ntp.rs  sky.rs  slintplatform.rs  wifi.rs
src/boards/: mod.rs
ui/: background.slint  common.slint  countdown.slint  dataview.slint  main.slint  monster.slint  spritesheet.slint
ui/img/: Untitled.xcf
