[package]
name = "esp32-mipidsi-clock"
version = "0.1.0"
authors = ["mgrenonville <mgrenonville@mediarithmics.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-alloc = { version = "0.6.0" }
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.12.0", features = [
    "esp32c6", 
    "wifi"
] }

# embassy
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
embassy-time = "0.4.0"
embassy-executor = {version = "0.7.0" ,features = ["task-arena-size-8192"]}
embassy-sync = "0.6.2"
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "dns", "medium-ethernet", "packet-trace"] }

embedded-hal-bus = { version = "0.2.0" }
static_cell = "2.1.0"

log = { version = "0.4.22" }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }

smoltcp  = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
chrono = {version = "0.4.39", default-features = false, features = [ "alloc"]}
chrono-tz = { version = "0.5", default-features = false }
slint = { git = "https://github.com/slint-ui/slint", default-features = false ,  features = ["compat-1-10","unsafe-single-threaded","libm", "renderer-software"]}
# slint-viewer = { git = "https://github.com/slint-ui/slint" }

sntpc = { version = "0.5.2",default-features = false,  features = ["embassy-socket", "log"] }
ds1307 = "0.6.0"
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = "0.5.0"
mipidsi = "0.9.0"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
dotenvy = "0.15"

[features]
default = []
esp32-c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "esp-backtrace/esp32c3"]
esp32-c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "esp-backtrace/esp32c6"]


[target.riscv32imac-unknown-none-elf.dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c6"] }

[target.riscv32imac-unknown-none-elf.features]
default = ["esp32-c6"]


[target.riscv32imc-unknown-none-elf.dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
[target.riscv32imc-unknown-none-elf.features]
default = ["esp32-c3"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
