# Copyright © 2025 David Haig
# SPDX-License-Identifier: MIT

[package]
name = "slint-generated"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["David Haig <david@ninjametal.com>"]
readme = "README.md"
resolver = "2"
license = "MIT"
publish = false
repository = "https://github.com/slint-ui/slint"
homepage = "https://slint.dev"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }
i-slint-core-macros = { git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

#[dependencies]
#slint = { version = "1.9.1", default-features = false, features = [
#    "compat-1-2",
#    "unsafe-single-threaded",
#    "libm",
#    "renderer-software",
#] }
#i-slint-core-macros = { version = "1.9.1" }
#
#[build-dependencies]
#slint-build = { version = "1.9.1" }
